--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -99,14 +99,6 @@
 }
 
 @media only screen and (max-width: 500px) {
-    #mobileExpanded li {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 100%;
-        height: 10%;
-    }
     .nav-list ul li:hover a {
         color: #a3a3a3;
     }
